# fl-health-scraper

./: .gitignore  404.html  LICENSE  README.md  combine_files.py  download.py  go.mod  hello.go  html_scraper.py  index.html  mkdocs.yml  pyproject.toml  scrape.go
api_reference/: index.html
data/: output.csv  results.csv
docs/: api_reference.md  index.md
fl_health_charts/: scrapy.cfg
fl_health_charts/fl_health_charts/: items.py  middlewares.py  pipelines.py  settings.py
fl_health_charts/fl_health_charts/spiders/: opioid_dashboard.py  utils.py
fl_health_scraper/: __init__.py  core.py  helpers.py  run.py
notebooks/: check_output.ipynb  cleanup_files.ipynb  convert-to-long-form.ipynb
search/: search_index.json
src/: combine.py  helpers.py  run.py
src/fl_health_scraper/: __init__.py  constants.py  core.py
tests/: test_core.py
