[tool.poetry]
name = "fl-health-scraper"
version = "0.1.0"
description = "FL Health Charts Opioid Use Dashboard Web Scraper"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.1"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
mkdocs = "^1.1.2"
isort = "^5.7.0"
flake8 = "^3.8.4"
ipython = "^7.20.0"
mkdocstrings = "^0.14.0"
mkdocs-material = "^6.2.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
